--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.boco.routesample"
-        multiDexEnabled true
+//        multiDexEnabled true
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
@@ -23,6 +23,18 @@ android {
             //说明so的路径为该libs路径，关联所有地图SDK的so文件
         }
     }
+
+//    configurations.all {
+//        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+//            def requested = details.requested
+//            if (requested.group == 'com.android.support') {
+//                if (!requested.name.startsWith("multidex")) {
+//                    details.useVersion '24.1.0'
+//                }
+//            }
+//        }
+//    }
+
 }
 
 dependencies {
@@ -32,6 +44,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.zhihu.android:matisse:0.4.3'
     implementation files('libs/BaiduLBS_Android.jar')
     implementation files('libs/commons-codec-1.11.jar')
+    implementation files('libs/glide-3.6.0.jar')
+    compile 'io.reactivex.rxjava2:rxjava:2.1.10'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    //retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    //okhttp
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation files('libs/bmdp-interface-core.jar')
 }
