--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
     <!-- SD卡读取权限，用户写入离线定位数据-->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".MyApplication"
@@ -35,13 +38,16 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="pEN7rYGIH6hAg0WIbQK41P4cBvW89xq8" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".CreateRouteActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PreviewActivity" />
+        <activity android:name=".PointActivity" />
+        <activity android:name=".HistoryRouteActivity" />
 
 
         <service
