--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation files('libs/bmdp-interface-core.jar')
+    compile 'com.jaredrummler:material-spinner:1.1.0'
 }
