--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile project(':SharedPreferences_lib')
-    compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.github.f0ris.sweetalert:library:1.5.1'
     compile 'com.zhihu.android:matisse:0.4.3'
     implementation files('libs/BaiduLBS_Android.jar')
     implementation files('libs/commons-codec-1.11.jar')
